--- a/apps/docs/src/pages/docs/core/components.mdx
+++ b/apps/docs/src/pages/docs/core/components.mdx
@@ -5,45 +5,51 @@ export const layout = DocsLayout;
 
 export const getMetadata = () => ({
   title: 'Docs | Creating Components',
-  description: 'Learn how to create reusable components in Eco Pages using ghtml',
+  description: 'Learn how to create reusable components in Ecopages using ghtml',
 })
 
-# Creating Components in Eco Pages
+# Creating Components in Ecopages
 
-Components are the building blocks of your Eco Pages project. They allow you to create reusable pieces of UI that can be easily composed to build complex pages. In this guide, we'll explore how to create components using the ghtml approach with @ecopages/core.
+Components are the building blocks of your Ecopages project. They allow you to create reusable pieces of UI that can be easily composed to build complex pages. In this guide, we'll explore how to create components using the ghtml approach with @ecopages/core.
 
 ## Basic Component Structure
 
-A typical component in Eco Pages consists of two files:
+A typical component in Ecopages consists of two files:
 1. A `.ts` file for the component's structure and logic
 2. A `.script.ts` file for additional client-side interactivity (optional)
+3. A `.css` file for styling (optional)
 
 Let's create a simple counter component to demonstrate this structure, we will use the Radiant library from [@ecopages/radiant](https://radiant.ecopages.app/) to add client-side interactivity.
 
 ### RadiantCounter.ts
 
-<CodeBlock language="typescript">{`import { type EcoComponent, html } from '@ecopages/core';
+<CodeBlock>
+```typescript
+import { type EcoComponent, html } from '@ecopages/core';
 import type { RadiantCounterProps } from './radiant-counter.script';
 
 export const RadiantCounter: EcoComponent<RadiantCounterProps> = ({ count }) =>
-    html\`<radiant-counter count="\${count}">
-        <button type="button" data-ref="decrement" aria-label="Decrement">-</button>
-        <span data-ref="count">\${count}</span>
-        <button type="button" data-ref="increment" aria-label="Increment">+</button>
-    </radiant-counter>\`;
+  html`<radiant-counter count="${count}">
+      <button type="button" data-ref="decrement" aria-label="Decrement">-</button>
+      <span data-ref="count">${count}</span>
+      <button type="button" data-ref="increment" aria-label="Increment">+</button>
+  </radiant-counter>`;
 
 RadiantCounter.config = {
-    importMeta: import.meta,
-    dependencies: {
-      scripts: ['./radiant-counter.script.ts'],
-      stylesheets: ['./radiant-counter.css'],
-    },
-};`}</CodeBlock>
+  importMeta: import.meta,
+  dependencies: {
+    scripts: ['./radiant-counter.script.ts'],
+    stylesheets: ['./radiant-counter.css'],
+  },
+};
+```
+</CodeBlock>
 
 ### radiant-counter.script.ts
 
-<CodeBlock lang='typescript'>
-{`import { RadiantElement } from '@ecopages/radiant/core';
+<CodeBlock>
+```typescript
+import { RadiantElement } from '@ecopages/radiant/core';
 import { customElement } from '@ecopages/radiant/decorators/custom-element';
 import { onEvent } from '@ecopages/radiant/decorators/on-event';
 import { onUpdated } from '@ecopages/radiant/decorators/on-updated';
@@ -56,33 +62,34 @@ export type RadiantCounterProps = {
 
 @customElement('radiant-counter')
 export class RadiantCounter extends RadiantElement {
-    @reactiveProp({ type: Number, reflect: true }) declare value: number;
-    @query({ ref: 'count' }) countText!: HTMLElement;
+  @reactiveProp({ type: Number, reflect: true }) declare value: number;
+  @query({ ref: 'count' }) countText!: HTMLElement;
 
-    @onEvent({ ref: 'decrement', type: 'click' })
-    decrement() {
-      if (this.value > 0) this.value--;
-    }
+  @onEvent({ ref: 'decrement', type: 'click' })
+  decrement() {
+    if (this.value > 0) this.value--;
+  }
 
-    @onEvent({ ref: 'increment', type: 'click' })
-    increment() {
-      this.value++;
-    }
+  @onEvent({ ref: 'increment', type: 'click' })
+  increment() {
+    this.value++;
+  }
 
-    @onUpdated('value')
-    updateCount() {
-      this.countText.textContent = this.value.toString();
-      this.dispatchEvent(new Event('change'));
-    }
+  @onUpdated('value')
+  updateCount() {
+    this.countText.textContent = this.value.toString();
+    this.dispatchEvent(new Event('change'));
+  }
 }
 
 declare global {
-    namespace JSX {
-      interface IntrinsicElements {
-        'radiant-counter': HtmlTag & RadiantCounterProps;
-      }
+  namespace JSX {
+    interface IntrinsicElements {
+      'radiant-counter': HtmlTag & RadiantCounterProps;
     }
-}`}
+  }
+}
+```
 </CodeBlock>
 
 ## Key Points:
@@ -93,8 +100,9 @@ declare global {
 
 ## Component Config
 
-The EcoComponent config is an essential part of creating components in Eco Pages. It provides necessary information for the framework to properly handle and render the component. Here's a brief overview of the config object and its mandatory fields:
+The EcoComponent config is an essential part of creating components in Ecopages. It provides necessary information for the framework to properly handle and render the component. Here's a brief overview of the config object and its mandatory fields:
 
+<CodeBlock>
 ```typescript
 RadiantCounter.config = {
   importMeta: import.meta,
@@ -104,6 +112,7 @@ RadiantCounter.config = {
   },
 };
 ```
+</CodeBlock>
 
 Mandatory fields:
 
@@ -115,14 +124,15 @@ Mandatory fields:
    - `stylesheets`: An array of paths to CSS files that style the component.
    - `components`: An array of other components that this component depends on (not shown in the example above, but used in page components).
 
-The `dependencies` object helps Eco Pages manage asset loading and optimize performance by only loading necessary resources.
+The `dependencies` object helps Ecopages manage asset loading and optimize performance by only loading necessary resources.
 
 While not mandatory, it's a best practice to include all relevant dependencies in this config object to ensure proper rendering and functionality of your component.
 
 For reference, you can see examples of this config being used in the following files:
 
 
-<CodeBlock language="typescript">{`
+<CodeBlock>
+```typescript
 RadiantCounter.config = {
   importMeta: import.meta,
   dependencies: {
@@ -130,14 +140,15 @@ RadiantCounter.config = {
     stylesheets: ['./radiant-counter.css'],
   },
 };
-`}</CodeBlock>
+```
+</CodeBlock>
 
 
 
-## CSS in Eco Pages Components
+## CSS in Ecopages Components
 
-In Eco Pages, CSS for components is typically defined in separate files and loaded through the component's config. 
-Please note that `tailwind` and `postcss` are supported by default in Eco Pages. Please refer to the configuration section for more details.
+In Ecopages, CSS for components is typically defined in separate files and loaded through the component's config. 
+Please note that `tailwind` and `postcss` are supported by default in Ecopages. Please refer to the configuration section for more details.
 
 Here's how it works:
 
@@ -149,7 +160,9 @@ Here's how it works:
 
 To use your components in pages, import them and include them in your HTML template:
 
-<CodeBlock language="typescript">{`import { RadiantCounter } from '@/components/radiant-counter';
+<CodeBlock>
+```typescript
+import { RadiantCounter } from '@/components/radiant-counter';
 import { BaseLayout } from '@/layouts/base-layout';
 import { type EcoComponent, type GetMetadata, html } from '@ecopages/core';
 
@@ -159,15 +172,15 @@ export const getMetadata: GetMetadata = () => ({
 });
 
 const HomePage: EcoComponent = () =>
-  html\`\${BaseLayout({
+  html`${BaseLayout({
     class: 'main-content',
     children: html\`
-      <h1 class="main-title">Eco pages</h1>
-      \${RadiantCounter({
+      <h1 class="main-title">Ecopages</h1>
+      ${RadiantCounter({
         count: 5,
       })}
-    \`,
-  })}\`;
+    `,
+  })}`;
 
 HomePage.config = {
     importMeta: import.meta,
@@ -177,7 +190,8 @@ HomePage.config = {
 };
 
 export default HomePage;
-`}</CodeBlock>
+```
+</CodeBlock>
 
 ## Best Practices for Component Creation
 
@@ -188,4 +202,4 @@ export default HomePage;
 5. **Styling**: Use separate CSS files for styling your components.
 6. **Config Object**: Always include the `config` object with `importMeta` and necessary dependencies.
 
-By following these guidelines and leveraging the power of ghtml components with @ecopages/core, you can create robust, reusable, and interactive components that will help you build efficient and maintainable websites with Eco Pages.
+By following these guidelines and leveraging the power of ghtml components with @ecopages/core, you can create robust, reusable, and interactive components that will help you build efficient and maintainable websites with Ecopages.
