--- a/apps/docs/src/pages/docs/getting-started/installation.mdx
+++ b/apps/docs/src/pages/docs/getting-started/installation.mdx
@@ -4,26 +4,29 @@ import { DocsLayout } from '@/layouts/docs-layout';
 export const layout = DocsLayout;
 
 export const getMetadata = () => ({
-	title: 'Docs | Installation',
-	description: 'Learn how to install and set up Eco Pages for your project',
+  title: 'Docs | Installation',
+  description: 'Learn how to install and set up Ecopages for your project',
 })
 
 ## Installation
 
-To create a new Eco Pages project, you can install the core package and desired integrations using Bun:
+To create a new Ecopages project, you can install the core package and desired integrations using Bun:
 
-<CodeBlock lang='bash'>
-{`bun jsr add @ecopages/core @ecopages/kitajs @ecopages/mdx`}
+<CodeBlock>
+```bash
+bun jsr add @ecopages/core @ecopages/kitajs @ecopages/mdx
+```
 </CodeBlock>
 
 This example installs the core package along with the KitaJS and MDX integrations. You can add or remove integrations based on your project needs.
 
 ## Configuration
 
-After installation, create an `eco.config.ts` file in your project's root directory to configure Eco Pages:
+After installation, create an `eco.config.ts` file in your project's root directory to configure Ecopages:
 
-<CodeBlock lang='typescript'>
-{`import { ConfigBuilder } from '@ecopages/core';
+<CodeBlock>
+```typescript
+import { ConfigBuilder } from '@ecopages/core';
 import { kitajsPlugin } from '@ecopages/kitajs';
 import { mdxPlugin } from '@ecopages/mdx';
 
@@ -33,14 +36,15 @@ const config = await new ConfigBuilder()
   .setIntegrations([kitajsPlugin(), mdxPlugin()])
   .build();
 
-export default config;`}
+export default config;
+```
 </CodeBlock>
 
-This configuration sets up Eco Pages with the KitaJS and MDX integrations. Adjust the integrations and other settings as needed for your project.
+This configuration sets up Ecopages with the KitaJS and MDX integrations. Adjust the integrations and other settings as needed for your project.
 
 ## Project Structure
 
-A typical Eco Pages project structure looks like this:
+A typical Ecopages project structure looks like this:
 
 ```
 my-project/
@@ -59,24 +63,38 @@ my-project/
 - `src/components/`: Stores reusable components
 - `src/includes/`: Contains include templates (e.g., `head.kita.tsx`, `html.kita.tsx`)
 - `public/`: Static assets that will be copied to the build directory
-- `eco.config.ts`: Eco Pages configuration file
+- `eco.config.ts`: Ecopages configuration file
 
 ## Usage
 
 Add the following scripts to your `package.json`:
 
-<CodeBlock lang='json'>
-{`{
+<CodeBlock>
+```json
+{
   "scripts": {
     "dev": "ecopages dev",
     "build": "ecopages build",
     "start": "ecopages start",
     "preview": "ecopages preview"
   }
-}`}
+}
+``` 
 </CodeBlock>
 
-Now you can use these commands to develop and build your Eco Pages project:
+| Note:
+Due to current limitations of jsr, the bin directory should be added manually on postinstall.
+Please add the following postinstall script to your `package.json`:
+  
+<CodeBlock>
+```json
+{
+  "postinstall": "bunx symlink-dir node_modules/@ecopages/core/src/bin/ecopages.js node_modules/.bin/ecopages"
+}
+```
+</CodeBlock>
+
+Now you can use these commands to develop and build your Ecopages project:
 
 - `bun run dev`: Starts the development server
 - `bun run build`: Builds your project for production
@@ -85,4 +103,4 @@ Now you can use these commands to develop and build your Eco Pages project:
 
 ## Next Steps
 
-With Eco Pages installed and configured, you're ready to start building your static site. Check out the [Creating Pages](/docs/guides/creating-pages) guide to learn how to create content using different integrations.
+With Ecopages installed and configured, you're ready to start building your static site. Check out the [Creating Pages](/docs/guides/creating-pages) guide to learn how to create content using different integrations.
