--- a/apps/docs/src/pages/docs/getting-started/introduction.mdx
+++ b/apps/docs/src/pages/docs/getting-started/introduction.mdx
@@ -4,39 +4,39 @@ export const layout = DocsLayout;
 
 export const getMetadata = () => ({
   title: 'Docs | Introduction',
-  description: 'Discover Eco Pages: A resource-efficient static site generator',
+  description: 'Discover Ecopages: A resource-efficient static site generator',
 })
 
-# Welcome to Eco Pages
+# Welcome to Ecopages
 
-In a world where web development often feels bloated and resource-intensive, Eco Pages emerges as a breath of fresh air. We're thrilled to introduce you to a static site generator that puts efficiency and simplicity at the forefront, without compromising on power or flexibility.
+In a world where web development often feels bloated and resource-intensive, Ecopages emerges as a breath of fresh air. We're thrilled to introduce you to a static site generator that puts efficiency and simplicity at the forefront, without compromising on power or flexibility.
 
-## What is Eco Pages?
+## What is Ecopages?
 
-Eco Pages is a modern, environmentally conscious static site generator designed for developers who care about both performance and sustainability. By generating static websites, Eco Pages significantly reduces the need for server-side processing, leading to faster load times and lower energy consumption.
+Ecopages is a modern, environmentally conscious static site generator designed for developers who care about both performance and sustainability. By generating static websites, Ecopages significantly reduces the need for server-side processing, leading to faster load times and lower energy consumption.
 
 ### Key Features:
 
-1. **Resource Efficiency**: As a static site generator, Eco Pages minimizes server load and energy usage, making your web presence more eco-friendly.
+1. **Resource Efficiency**: As a static site generator, Ecopages minimizes server load and energy usage, making your web presence more eco-friendly.
 
 2. **Minimal Dependencies**: We've carefully curated a small set of powerful dependencies, reducing your project's complexity and environmental footprint.
 
-3. **Versatility**: Whether you're building a personal blog, a portfolio, or a small business website, Eco Pages adapts to your needs.
+3. **Versatility**: Whether you're building a personal blog, a portfolio, or a small business website, Ecopages adapts to your needs.
 
-4. **Modern Tech Stack**: Built on [Bun](https://bun.sh/), Eco Pages leverages cutting-edge technologies for optimal performance.
+4. **Modern Tech Stack**: Built on [Bun](https://bun.sh/), Ecopages leverages cutting-edge technologies for optimal performance.
 
 5. **Flexible Templating**: With support for [Kita](https://kita.js.org/), [MDX](https://mdxjs.com/), and [Lit](https://lit.dev/), you have the freedom to choose the templating engine that suits your project best.
 
-6. **Built-in Optimization**: Eco Pages integrates [Tailwind CSS](https://tailwindcss.com/) with [PostCSS](https://postcss.org/) for efficient styling without the bloat.
+6. **Built-in Optimization**: Ecopages integrates [Tailwind CSS](https://tailwindcss.com/) with [PostCSS](https://postcss.org/) for efficient styling without the bloat.
 
-## Why Choose Eco Pages?
+## Why Choose Ecopages?
 
-In an era where digital sustainability is becoming increasingly important, Eco Pages offers a way to create beautiful, functional websites while minimizing your environmental impact. By generating static sites, we reduce the need for constant server computations, leading to lower energy consumption and a smaller carbon footprint.
+In an era where digital sustainability is becoming increasingly important, Ecopages offers a way to create beautiful, functional websites while minimizing your environmental impact. By generating static sites, we reduce the need for constant server computations, leading to lower energy consumption and a smaller carbon footprint.
 
 Our approach is simple: provide the tools you need to build great websites, without the unnecessary complexity that often comes with modern web development. This not only makes your development process more efficient but also ensures that your final product is lean, fast, and kind to the planet.
 
 ## Getting Started
 
-Ready to build eco-friendly websites? Dive into our [Installation Guide](/docs/getting-started/installation) to set up your first Eco Pages project. Whether you're a seasoned developer or just starting out, we're here to help you create websites that look good and feel good – for you and the environment.
+Ready to build eco-friendly websites? Dive into our [Installation Guide](/docs/getting-started/installation) to set up your first Ecopages project. Whether you're a seasoned developer or just starting out, we're here to help you create websites that look good and feel good – for you and the environment.
 
-Join us in making the web a little greener, one static site at a time. Welcome to the Eco Pages community!
+Join us in making the web a little greener, one static site at a time. Welcome to the Ecopages community!
