feature(#51): Added getMetadata, getStaticProps and getStaticPaths docs

--- a/apps/docs/src/pages/docs/core/pages.mdx
+++ b/apps/docs/src/pages/docs/core/pages.mdx
@@ -95,6 +95,104 @@ HomePage.config = {
 ```
 </CodeBlock>
 
+You're absolutely right. Adding information about `getMetadata`, `getStaticProps`, and `getStaticPaths` is crucial for understanding how to work with data in Ecopages. I'll create a new section called "Working with Data" to cover these important concepts. Here's the addition we can make to the existing content:
+
+## Working with Data
+
+Ecopages provides several powerful functions for working with data in your pages:
+
+### getMetadata
+
+The `getMetadata` function allows you to define page-specific metadata. 
+Please note that you can set defaultMetadata in the config to avoid repeating yourself.
+This is useful for SEO and social sharing:
+
+<CodeBlock>
+```typescript
+import { type GetMetadata } from '@ecopages/core';
+
+export const getMetadata: GetMetadata = () => ({
+  title: 'My Page Title',
+  description: 'A description of my page',
+  image: 'path/to/og-image.jpg',
+  keywords: ['ecopages', 'static site', 'typescript'],
+});
+```
+</CodeBlock>
+
+### getStaticProps
+
+`getStaticProps` is used to fetch data at build time. This is ideal for data that do not depend on page parameters.
+
+<CodeBlock>
+```typescript
+import { type GetStaticProps } from '@ecopages/core';
+
+export const getStaticProps: GetStaticProps = async () => {
+  const data = await fetchSomeData();
+  return {
+    props: {
+      data,
+    },
+  };
+};
+
+const MyPage: EcoComponent<{ data: any }> = ({ data }) => html`
+  <div>
+    <h1>My Page</h1>
+    <p>${data.someField}</p>
+  </div>
+`;
+```
+</CodeBlock>
+
+### getStaticPaths
+
+For dynamic routes, `getStaticPaths` is used to specify which paths will be pre-rendered at build time:
+
+<CodeBlock>
+```typescript
+export const getMetadata: GetMetadata<BlogPostProps> = async ({ props: { title, slug } }) => {
+  return {
+    title,
+    description: `This is a blog post with the slug ${slug}`,
+  };
+};
+
+export const getStaticProps: GetStaticProps = async ({ params }) => {
+  const data = await fetchDataForSlug(params.slug);
+  return {
+    props: {
+      data,
+    },
+  };
+};
+
+export const getStaticPaths: GetStaticPaths = async () => {
+ const paths = await fetchAvailablePaths();
+  return {
+    paths: paths.map(path => ({ params: { slug: path } })),
+  };
+};
+
+export const getStaticProps: GetStaticProps<BlogPostProps> = async ({ pathname }) => {
+  const data = await fetchDataForSlug(params.slug);
+  return {
+    props: {
+      ...data,
+    },
+  };
+};
+
+const DynamicPage: EcoComponent<BlogPostProps> = (props) => html`
+  <div>
+    <h1>${props.title}</h1>
+    <p>${props.content}</p>
+  </div>
+`;
+```
+</CodeBlock>
+
 ## Lazy Loading Components
 
 Ecopages provides powerful tools for lazy loading components, which can significantly improve your site's performance. 
