--- a/apps/docs/src/pages/docs/core/layouts.mdx
+++ b/apps/docs/src/pages/docs/core/layouts.mdx
@@ -32,7 +32,7 @@ import { type EcoComponent, html } from '@ecopages/core';
 export const Html: EcoComponent<{ children: string }> = ({ children }) => html`
   <!DOCTYPE html>
   <html lang="en">
-    !$\{children}
+    !${children}
   </html>
 `;
 
