feature(#51): Rewrite introduction

--- a/apps/docs/src/pages/docs/getting-started/introduction.mdx
+++ b/apps/docs/src/pages/docs/getting-started/introduction.mdx
@@ -7,36 +7,43 @@ export const getMetadata = () => ({
   description: 'Discover Ecopages: A resource-efficient static site generator',
 })
 
+<div class="banner banner--alert" role="alert">
+  <p class="banner__title">Beta Notice</p>
+  <p>The Ecopages documentation is currently in beta. The API is not stable yet and will have major changes before the first stable release. Use at your own risk.</p>
+</div>
+
 # Welcome to Ecopages
 
-In a world where web development often feels bloated and resource-intensive, Ecopages emerges as a breath of fresh air. We're thrilled to introduce you to a static site generator that puts efficiency and simplicity at the forefront, without compromising on power or flexibility.
+Ecopages is a static site generator currently under active development. While it's still evolving, it's stable enough for use in projects.
 
 ## What is Ecopages?
 
-Ecopages is a modern, environmentally conscious static site generator designed for developers who care about both performance and sustainability. By generating static websites, Ecopages significantly reduces the need for server-side processing, leading to faster load times and lower energy consumption.
+Ecopages is a tool designed to help developers create static websites efficiently. It aims to balance simplicity with the features needed for modern web development, while also considering environmental impact.
 
 ### Key Features:
 
-1. **Resource Efficiency**: As a static site generator, Ecopages minimizes server load and energy usage, making your web presence more eco-friendly.
+1. **Static Site Generation**: Ecopages creates static HTML files, which can lead to faster load times and reduced server load.
 
-2. **Minimal Dependencies**: We've carefully curated a small set of powerful dependencies, reducing your project's complexity and environmental footprint.
+2. **Minimal Dependencies**: We try to keep external dependencies to a minimum to reduce complexity and decrease the overall footprint of your project.
 
-3. **Versatility**: Whether you're building a personal blog, a portfolio, or a small business website, Ecopages adapts to your needs.
+3. **Flexibility**: Ecopages works with various templating options, including MDX, Kita, and Lit.
 
-4. **Modern Tech Stack**: Built on [Bun](https://bun.sh/), Ecopages leverages cutting-edge technologies for optimal performance.
+4. **Built on Bun**: Leveraging Bun's speed for improved build times and energy efficiency.
 
-5. **Flexible Templating**: With support for [Kita](https://kita.js.org/), [MDX](https://mdxjs.com/), and [Lit](https://lit.dev/), you have the freedom to choose the templating engine that suits your project best.
+5. **Tailwind Integration**: Built-in support for Tailwind CSS with PostCSS for efficient styling.
 
-6. **Built-in Optimization**: Ecopages integrates [Tailwind CSS](https://tailwindcss.com/) with [PostCSS](https://postcss.org/) for efficient styling without the bloat.
+6. **Eco-friendly Approach**: By generating static sites and optimizing asset loading, Ecopages aims to reduce the energy consumption of websites built with it.
 
-## Why Choose Ecopages?
+## Current Status
 
-In an era where digital sustainability is becoming increasingly important, Ecopages offers a way to create beautiful, functional websites while minimizing your environmental impact. By generating static sites, we reduce the need for constant server computations, leading to lower energy consumption and a smaller carbon footprint.
+Ecopages is in active development. While it's functional and can be used for projects, you may encounter bugs or missing features. We're continuously working on improvements and welcome feedback from users.
 
-Our approach is simple: provide the tools you need to build great websites, without the unnecessary complexity that often comes with modern web development. This not only makes your development process more efficient but also ensures that your final product is lean, fast, and kind to the planet.
+## Environmental Consideration
+
+We believe that every bit counts when it comes to reducing the environmental impact of web development. Ecopages strives to create lightweight, efficient websites that consume less energy both during development and in production. However, we're still learning and improving in this area, and we welcome ideas on how to make Ecopages even more eco-friendly.
 
 ## Getting Started
 
-Ready to build eco-friendly websites? Dive into our [Installation Guide](/docs/getting-started/installation) to set up your first Ecopages project. Whether you're a seasoned developer or just starting out, we're here to help you create websites that look good and feel good – for you and the environment.
+If you're interested in trying Ecopages, check out our [Installation Guide](/docs/getting-started/installation). We recommend starting with small projects as you get familiar with the tool.
 
-Join us in making the web a little greener, one static site at a time. Welcome to the Ecopages community!
+We appreciate your interest in Ecopages and welcome any contributions or feedback you might have as we continue to develop and improve the project, both in terms of functionality and environmental impact.
